{
  "general" : {
    "legal_notice_path": "legal_notice_en.html",
    "legal_google_play_notice": "Google Play and the Google Play logo are trademarks of Google LLC.",
    "app_name": "Beercules",
    "app_slogan": "Play like a god",
    "app_description": "Beercules is the ultimate drinking game for you.\n Whether to pre-drink or to get the party started. With over 60 cards, you will have the best evening of your life.\n",
    "event_type": {
      "immediate_once": "Immediate action",
      "within_next_round_once": "Within next round",
      "entire_game": "Whole game",
      "mini_game": "Mini game"
    }
  },
  "landing_view": {
    "best_app_slogan": "The best party game since party games existed!",
    "reviews": {
      "title": "Reviews",
      "review1": {
        "reviewAuthor": "B. Sinz",
        "reviewText": "The best drinking game,\nexcept for Rage Cage \uD83D\uDE1C"
      },
      "review2": {
        "reviewAuthor": "A. Meier",
        "reviewText": "Makes a lot of fun\n and is always with me."
      },
      "review3": {
        "reviewAuthor": "L. Baumert",
        "reviewText": "Except for the headache\n a great game"
      },
      "review4": {
        "reviewAuthor": "V. Michaels",
        "reviewText": "Always great\n and always recommended"
      }
    }
  },
  "home_view": {
    "title": "Beercules",
    "sub_title": "Play like a god",
    "button": {
      "go_drinking": "\uD83C\uDF89 Party now \uD83C\uDF89",
      "rules": "Rules",
      "customize": "My cards"
    },
    "tracking_consent": {
      "button": "Tracking-Consent"
    }
  },
  "customize_view": {
    "restoredDefault":"The amount of each card was reset to the default!",
    "title": "My cards"
  },
  "rules_view": {
    "go_to_game": "\uD83C\uDF89 Party now \uD83C\uDF89",
    "title" : "How to",
    "rule_1_title" : "1. Sit down",
    "rule_1_description" : "All players sit in a circle.",
    "rule_2_title" : "2. Do it",
    "rule_2_description" : "One player starts taking a card by swiping it away. He reads the instruction out aloud and follows it.",
    "rule_3_title" : "3. Next one",
    "rule_3_description" : "After completing the cards action, it's your neighbor's turn."
  },
  "game_view": {
    "popup": {
      "header": "Cheers!!!",
      "continue": {
      "question": "You still have {cards_amount} cards left. Do you want to continue playing with the cards?",
        "button": "Continue Playing"
      },
      "custom_or_default": {
        "switch": {
          "question_custom": "Play with {cards_amount} of your cards",
          "question_default": "Play with {cards_amount} default cards"
        },
        "button": {
          "active_game_exists" : "New Round",
          "lets_go" : "Let's Go"
        }
      }
    },
    "finish": {
      "question": "Would you like to play another round?",
      "header": "Another round?",
      "yes": "Yes",
      "no": "No"
    },
    "instructions": {
      "DECKEL_DRAUF": {
        "title": "Lid on it",
        "description": "At some point secretly lay your flat hand on your glass. All players must quickly put their hands on their glass as well.\nThe slowest and last player gets punished.\n\nForget your task, and you get punished twice."
      },
      "EISPRINZESSIN": {
        "title": "Ice Princess",
        "description": "At some point, freeze your movement secretly. All players must now freeze immediately.\nThe slowest and last player gets punished.\n\nForget your task, and you get punished twice."
      },
      "OHREN_SPITZEN": {
        "title": "Listen carefully",
        "description": "At some point hold your earlobe secretly. All players must now also hold their earlobes.\nThe slowest and last player gets punished.\n\nForget your task, and you get punished twice."
      },
      "HAENDE_HOCH": {
        "title": "Hands up",
        "description": "At some point raise your two hands. All players must now also raise their hands quickly.\nThe slowest and last player gets punished.\n\nForget your task, and you get punished twice."
      },
      "BEER_LOVE": {
        "title": "Beer Love",
        "description": "Love you dearly with your glass.\nThe first one who notices, decides who gets punished"
      },
      "ICH_HAB_NOCH_NIE": {
        "title": "Never have I ever",
        "description": "You say something you have never done.\nAll those who have already done it get punished."
      },
      "EIN_GESCHENK_VON_HERZEN": {
        "title": "A gift",
        "description": "Someone gets punished.\nYou choose who."
      },
      "DREI_GESCHENKE_VON_HERZEN": {
        "title": "Three gifts",
        "description": "You must give away three punishments.\nYou can also give them to yourself."
      },
      "OPFERGLAS": {
        "title": "Victims glass",
        "description": "You fill up the victim glass with a sip of your drink."
      },
      "OPFERGLAS_LAST": {
        "title": "Victims glass",
        "description": "The last victim glass!\n\nYou must drink the whole glass now."
      },
      "SCHERE_STEIN_PAAR_BIER": {
        "title": "Rock, paper, beer",
        "description": "Choose a player who will play rock paper scissor against you.\nThe loser gets punished."
      },
      "TAUSCHRAUSCH": {
        "title": "Replacements",
        "description": "Choose two players who will swap the drink for one round.\nIt can be you, too."
      },
      "ICH_PACKE_MEINEN_KOFFER": {
        "title": "I pack my suitcase",
        "description": "You play \"I pack my suitcase\".\nYou start and the loser gets punished."
      },
      "FILMRISS": {
        "title": "Blackout",
        "description": "Name the last 3 cards in the correct order. Can you make it, all get punished, except for you.\nYou can not make it? You get punished."
      },
      "FRAGENKOENIG": {
        "title": "Questionking",
        "description": "You are the Questionking. Ask as many questions as possible to the other players. No matter which. As soon as they answer they get punished. You stay Questionking until someone new becomes Questionking."
      },
      "TRINK_BUDDY": {
        "title": "Party Buddy",
        "description": "Choose a player who always gets punished when you get punished and vice versa.\nYou remain buddies throughout the whole game.\n\nOf course you can also have several buddies."
      },
      "BIERGOTT": {
        "title": "Beer God",
        "description": "Imagine a new basic rule, like the other basic rules that apply throughout the whole game.\nWhoever breaks the rule gets punished.\n\nIn addition, it may not be for or against specific players (groups), but must apply to all."
      },
      "REIMSCHWEIN": {
        "title": "Rhyme time",
        "description": "You choose a word that needs to be rhymed in a clockwise direction.\nWhoever repeats a word, makes a mistake or does not know anymore after 10 seconds, gets punished."
      },
      "ALLE_FUER_EINEN": {
        "title": "All for one …",
        "description": "At some point during the game, you can skip a punishment, and all of your teammates get punished."
      },
      "AUFZAEHLUNG": {
        "title": "Enumeration",
        "description": "You choose a topic and start a list. If you repeat something or do not remember anything after 10 seconds, you get punished.\n\nSuggestions: (car brands, former presidents …)"
      },
      "ABSTIMMUNG": {
        "title": "Poll",
        "description": "You choose a topic to vote (A or B). The loser side gets punished. In case of a tie everybody gets punished."
      },
      "_1_2_3_BIER": {
        "title": "1, 2, X, 4",
        "description": "You name a number between 1 and 10. You now count up in a clockwise direction. For each number divisible by the selected one or where the selected one appears, the player must say \"Beercules\" instead of the number.\nYou're done when someone makes a mistake.\nThe one who made the mistake gets punished twice."
      },
      "RECHTS": {
        "title": "Right",
        "description": "Your right neighbor gets punished."
      },
      "LINKS": {
        "title": "Left",
        "description": "Your left neighbor gets punished."
      },
      "KNUTSCHKARTE": {
        "title": "Suck it",
        "description": "Take a business card or similar. and only pass it on by mouth. Your neighbor must now suck it and pass it directly to his neighbor.\nThe two players who drop it, get punished."
      },
      "MENS_HEALTH": {
        "title": "Men's Health",
        "description": "All men get punished."
      },
      "WOMENS_HEALTH": {
        "title": "Women's Health",
        "description": "All women get punished."
      },
      "MEDUSA": {
        "title": "Medusa",
        "description": "Everyone closes their eyes. You count to three and then all players look up. Everyone has to choose one player and stare at them. If two people stare directly at each other, they are both punished."
      },
      "LIVE_LAUGH_LAUGH": {
        "title": "Live Laugh Laugh",
        "description": "Laughing is not allowed for one round. The first player in the next round to laugh gets punished."
      },
      "VOLL_GEIL_GEIL_VOLL": {
        "title": "Full glass, full voll",
        "description": "The player with the fullest glass gets punished."
      },
      "HEY_DU": {
        "title": "Hey Du",
        "description": "All players must say \"Hey You\" instead of your name for one round. Who says your name will be punished."
      },
      "ADS_ADS_ADS": {
        "title": "Ads Ads Ads",
        "description": "Ads Ads Ads. Everywhere is ads. Click on the card to see the ad or you will be punished. The group decides how often.\n\n If you don't see any ads, you simply will be punished 3 times." 
      },
      "KLAUS": {
        "title": "Klaus",
        "description": "Du darfst die nächste Runde eine Karte für dich beanspruchen. Es ist so als hättest du diese Karte gezogen. Der ursprünglich ziehende Spieler wird bestraft und ist anschließend erneut an der Reihe." 
      },
      "DOUBLE_TIME": {
        "title": "Double Time",
        "description": "You can shout \"Double Time\" at any time when someone is punished until someone else gets this card. All players who are currently punished must say \"Thank you\" and must double their punishments. But here's the catch. You yourself must also get the half of the punishments."
      },
      "RICHTUNGSWECHSEL": {
        "title": "Change of direction",
        "description": "Take a break.\nOnly change direction and you get punished."
      },
      "KETTENREAKTION": {
        "title": "Chain reaction",
        "description": "Everyone is starting to drink.\nOnly when the first one has emptied his glass his right neighbor stop can stop.\nThen his right neighbor, and so on."
      },
      "SPIEGLEIN_SPIEGLEIN": {
        "title": "Mirror Mirror",
        "description": "Decide who is the best looking one. He / she gets punished. If you do not agree, all get punished."
      },
      "SING_NO_SONG": {
        "title": "Sing no song",
        "description": "From now on no song can be sung or rocked with. Who breaks the rule, drinks one."
      },
      "BASIC_RULE_1": {
        "title": "SHUT UP",
        "description": "There must be no curse words oder insults said or shown.\n\nThis rule applies throughout the game. Who breaks it, gets punished"
      },
      "BASIC_RULE_2": {
        "title": "LEFTY RIGHTY",
        "description": "You always have to drink with your left hand Left-handers drink with the right hand.\n\nThis rule applies throughout the game. Who breaks it, gets punished"
      },
      "BASIC_RULE_3": {
        "title": "DON'T SAY IT",
        "description": "You can not say the word \"drink\", drunk etc.\n\nThis rule applies throughout the game. Who breaks it, gets punished"
      }
    }
  }
}